--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-lineicons": "^3.0.0",
+    "react-simple-typewriter": "^3.0.1",
     "sass": "^1.37.2"
   },
   "devDependencies": {
